pg-helm-test/infinite-mario/manifests/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: infinite-mario
  annotations:
    deployment.kubernetes.io/revision: '1'
    argocd.argoproj.io/sync-wave: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infinite-mario
  template:
    metadata:
      labels:
        app: infinite-mario
    spec:
      containers:
        - name: container
          image: quay.io/kmoini/infinite_mario
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
